@@ -105,7 +105,7 @@ sub get_system_field_info
 
 	return
 	( 
-		{ name=>"accessid", type=>"int", required=>1 },
+		{ name=>"accessid", type=>"int", required=>1, can_clone=>0 },
 
 		{ name=>"datestamp", type=>"time", required=>1, },
 
