@@ -116,7 +116,7 @@ sub get_system_field_info
 	my( $class ) = @_;
 
 	return ( 
-	{ name=>"eprintid", type=>"int", required=>1, import=>0 },
+	{ name=>"eprintid", type=>"int", required=>1, import=>0, can_clone=>0 },
 
 	{ name=>"rev_number", type=>"int", required=>1, can_clone=>0 },
 
