@@ -63,7 +63,7 @@ sub get_system_field_info
 
 	return 
 	( 
-		{ name=>"id", type=>"int", required=>1, import=>0 },
+		{ name=>"id", type=>"int", required=>1, import=>0, can_clone=>1, },
 
 		{ name=>"rev_number", type=>"int", required=>1, can_clone=>0 },
 
